  - Fixed defect #875 IMDB changed the layout for directors and needs to be updated
  - Fixed defect #877 High-Definition Properties (720 or 1080) for Hebrew skin
  - Enhancement  #880 Reject Artwork if it's too low res
  - Enhancement  #883 Ability to re-order poster search sites
  - Fixed defect #886 Wrong IMDB poster in latest poster scanner
  - Fixed defect #903 Kinopoisk fixes after site update

MovieJukebox 1.0.17 beta
------------------------
  - Enhancement  #218 Play button on remote for multipart movies
  - Enhancement  #226 Additional indexes by actor, director, and country; provide links to these index pages on movie details page
                      Extra parameters to fine-tune index generation: mjb.categories.indexList, displayList, and minCategoryCount
  - Enhancement  #311 A playlist is now generated for all movies (even if there's only one file), and it is customizable via playlist.xsl
  - Enhancement  #411 Plugin for Dutch movie database (www.moviemeter.nl)
  - Enhancement  #455 Split HD Category into 720p and 1080p
  - Enhancement  #462 Enable/disable Year and Certification rating in index page of all skins. New skin-options.xsl file.
  - Enhancement  #465 Play All link at beginning of playlist instead of end
  - Fixed defect #475 Correctly display index pages when mjb.nbThumbnailsPerLine=1
  - Enhancement  #498 AppleTrailer download control for trailer types
  - Enhancement  #507 Properties can be overridden at the command line
  - Fixed defect #565 FilmAffinity ID ignored
  - Fixed defect #581 gfb skin's links to genres from movie details pages were broken for filtered genres
  - Fixed defect #586 Reverse sort order ignored for sd, gfb107, and gfb107-sd skins
  - Enhancement  #631 Ability to limit number of Apple trailers per movie
  - Fixed defect #636 (Regression) Check for file-based subtitles
  - Fixed defect #644 Directory fanart not found on POSIX systems
  - Fixed defect #645 IMDB plots with embedded HTML tags are now parsed correctly